<resources>
    <string name="app_name">Cuco</string>
    <string name="welcome">Bem vindo!</string>
    <string name="adicionar_novo_item">Adicionar novo item</string>
    <string name="subtitulo">Subtitulo</string>
    <string name="titulo">Titulo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar ou cadastrar</string>
    <string name="action_sign_in_short">Cadastrar</string>
    <string name="invalid_username">Nome de usuário invalido</string>
    <string name="invalid_password">A senha deve ter mais de 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>