<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SecondfragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground"
    android:backgroundTint="?android:attr/colorBackground"
    android:orientation="vertical"
    android:theme="@style/Theme.Cuco">

    <LinearLayout
        android:id="@+id/SecondFragmentlinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dialogcorners"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/adicionar_novo_item"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EdtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/titulo"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R$"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EdtSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/subtitulo"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedconers"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PreferedColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTintMode="src_in"
                android:padding="2dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/imageViewColor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTintMode="screen"
                    android:elevation="0dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    app:srcCompat="@drawable/gradientcard"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="2dp" />

                <ImageView
                    android:id="@+id/BtnColorpicker"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center_horizontal"
                    android:tintMode="multiply"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/colorpickericon"
                    app:tint="#2291e0" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Cores"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/BtnColorpicker" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTintMode="src_in"
                android:padding="2dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/categoryIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTintMode="screen"
                    android:layout_marginTop="7dp"
                    android:elevation="0dp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    app:srcCompat="@drawable/gradientcard"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="2dp" />

                <ImageView
                    android:id="@+id/categoryPicker"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center_horizontal"
                    android:background="@drawable/circleborders"
                    android:backgroundTint="#9CB8FF"
                    android:padding="10dp"
                    android:tintMode="multiply"
                    app:layout_constraintEnd_toEndOf="@+id/categoryIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/categorias"
                    app:tint="#E05F22" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Icone"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoryPicker" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTintMode="src_in"
                android:padding="2dp"
                android:visibility="gone"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/dateIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:backgroundTintMode="screen"
                    android:elevation="0dp"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"
                    app:srcCompat="@drawable/gradientcard"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="2dp" />

                <ImageView
                    android:id="@+id/dateSelector"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center_horizontal"
                    android:background="@drawable/circleborders"
                    android:backgroundTint="#FFDA76"
                    android:padding="10dp"
                    android:tintMode="multiply"
                    app:layout_constraintEnd_toEndOf="@+id/dateIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/agenda"
                    app:tint="#E05F22" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Agendar"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateSelector" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ShareBtn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/roundedconers"
                app:srcCompat="@android:drawable/ic_menu_share" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AddBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@drawable/roundedconers"
                android:text="Adicionar"
                app:backgroundTint="#005CDD"></com.google.android.material.button.MaterialButton>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>